--- a/index.html
+++ b/index.html
@@ -26,22 +26,44 @@
 
     <div class="tabela">
 
+        <!-- nagłówek -->
+
+        <div class="container how"> 
+            <div>
+                <div class="row rowHow">
+                    <div class="col-7">
+                        <th scope="col"></th>
+                    </div>
+                    <div class="col-1">
+                        <th scope="col"></th>
+                    </div>
+                    <div class="col-2">
+                        <th scope="col"> Kwota planowana</th>
+                    </div>
+                    <div class="col-2">
+                        <th scope="col"> Kwota wydana</th>
+                    </div>
+                </div>
+            </div>
+           
+        </div>
+
         <!-- Pielegnacja i leki tabela -->
 
-        <div class="container medicin">Pielęgnacja i leki
+        <div class="container medicin">Pielęgnacja i leki   <img src="nasal-aspirator.png" class ="img" alt="">
             <div>
                 <div class="row rowMedic">
                     <div class="col-7">
-                        <th scope="col"><input type="text" class="input-field"></th>
+                        <th scope="col"><input type="text" id="input" class="input-field"></th>
                     </div>
                     <div class="col-1">
                         <th scope="col"><input type="button" class="remove-button" value="-"></th>
                     </div>
                     <div class="col-2">
-                        <th scope="col"><input type="number" class="input-field-short expected-cost"></th>
+                        <th scope="col"><input type="number" id="input" class="input-field-short expected-cost"></th>
                     </div>
                     <div class="col-2">
-                        <th scope="col"><input type="number" class="input-field-short real-cost"></th>
+                        <th scope="col"><input type="number" id="input" class="input-field-short real-cost"></th>
                     </div>
                 </div>
             </div>
@@ -57,20 +79,20 @@
         <!-- clothes tabel -->
 
 
-        <div class="container clothes"> Ubranka
+        <div class="container clothes"> Ubranka   <img src="bodysuit.png" class="img"  alt="">
             <div>
                 <div class="row rowclothes">
                     <div class="col-7">
-                        <th scope="col"><input type="text" class="input-field"></th>
+                        <th scope="col"><input type="text" id="input" class="input-field"></th>
                     </div>
                     <div class="col-1">
                         <th scope="col"><input type="button" class="remove-button" value="-"></th>
                     </div>
                     <div class="col-2">
-                        <th scope="col"><input type="number" class="input-field-short expected-cost"></th>
+                        <th scope="col"><input type="number" id="input" class="input-field-short expected-cost"></th>
                     </div>
                     <div class="col-2">
-                        <th scope="col"><input type="number" class="input-field-short real-cost"></th>
+                        <th scope="col"><input type="number" id="input" class="input-field-short real-cost"></th>
                     </div>
                 </div>
             </div>
@@ -87,20 +109,49 @@
         <!-- accessories tabela  -->
 
 
-        <div class="container accessories"> Akcesoria
+        <div class="container accessories"> Akcesoria   <img src="nasal-aspirator.png" class ="img"  alt="">
             <div>
                 <div class="row rowaccessories">
                     <div class="col-7">
-                        <th scope="col"><input type="text" class="input-field"></th>
+                        <th scope="col"><input type="text" id="input" class="input-field"></th>
                     </div>
                     <div class="col-1">
                         <th scope="col"><input type="button" class="remove-button" value="-"></th>
                     </div>
                     <div class="col-2">
-                        <th scope="col"><input type="number" class="input-field-short expected-cost"></th>
+                        <th scope="col"><input type="number" id="input" class="input-field-short expected-cost"></th>
                     </div>
                     <div class="col-2">
-                        <th scope="col"><input type="number" class="input-field-short real-cost"></th>
+                        <th scope="col"><input type="number" id="input" class="input-field-short real-cost"></th>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-7">
+                    <th scope="col"><input type="button" class="add-button" value="+"></th>
+                </div>
+                <div class="col">
+                </div>
+            </div>
+        </div>
+
+        <!-- Dla maymy tabela  -->
+
+
+        <div class="container forMama"> Dla mamy   <img src="pregnant.png" class ="img"  alt="">
+            <div>
+                <div class="row rowForMama">
+                    <div class="col-7">
+                        <th scope="col"><input type="text" id="input" class="input-field"></th>
+                    </div>
+                    <div class="col-1">
+                        <th scope="col"><input type="button" class="remove-button" value="-"></th>
+                    </div>
+                    <div class="col-2">
+                        <th scope="col"><input type="number" id="input" class="input-field-short expected-cost"></th>
+                    </div>
+                    <div class="col-2">
+                        <th scope="col"><input type="number" id="input" class="input-field-short real-cost"></th>
                     </div>
                 </div>
             </div>
@@ -114,6 +165,7 @@
         </div>
 
 
+
         <!-- obliczanie budżetu -->
 
 
@@ -122,7 +174,7 @@
                 <div class="col-8">
                     Budżet
                 </div>
-                <div class="row-4" id="expectDiv">  </div>
+                <div class="row-4" id="expectDiv"> </div>
             </div>
         </div>
     </div>
@@ -140,7 +192,7 @@
             </div>
             <div class="row">
                 <div class="col-8">dostępny budżet</div>
-                <div class="col-4" id="avalible"> </div>
+                <div class="col-4" id="avalible">0</div>
             </div>
         </div>
     </div>
